# FastApiMicroServiceTemplate

./: .flake8  .gitignore  .pre-commit-config.yaml  README.rst  cleanMagic.py  config.yml  docker-compose.yml  hash.py  magic.py  main.py  pyproject.toml  requirements.txt  settings.py
alembic/: env.py
alembic/versions/: 69dcdfaef72b_first_migration.py  e6139921da5f_add_user_fields.py
api/v1/: router.py
apps/healthcheck/: db.py  endpoints.py  logic.py  schema.py
apps/user/: db.py  endpoints.py  filters.py  logic.py  schema.py
db/: base_class.py  base_crud.py  session.py
dockerfiles/: Dockerfile
models/: __init__.py  models.py  user.py
requirements/: base.txt  dev.txt  local.txt
utils/: deps.py  redis.py
