[project]
name = "FastApi-App-Template"
description = "FastApi application template"
version = "0.1.0"
authors = [
    { name = "KriLeAnr", email = "500600@list.ru" }
]

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["./",]
line_length = 88
include_trailing_comma = true
force_grid_wrap = 0

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_unused_ignores = false
warn_return_any = false
namespace_packages = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
]
